@@ -1354,6 +1354,20 @@ Example  : cast grease orc\n\r\
 Creates a puddle of slippery grease on and beneath the target.  The target may \
 fumble their weapon, fall to the floor, or both.
 
+GREATER_CLAIREAUDIENCE=SPELL_GREATERCLAIREAUDIENCE
+SPELL_GREATERCLAIREAUDIENCE=<ABILITY>\
+Usage    : CAST "GREATER CLAIREAUDIENCE" [TARGET NAME] \n\r\
+Example  : cast "greater claireaudience" here\n\r\
+Causes the caster to hear everything said in the target place, \
+whether a room, area, or even a ship.
+
+GREATER_CLAIREVOYANCE=SPELL_GREATERCLAIREVOYANCE
+SPELL_GREATERCLAIREVOYANCE=<ABILITY>\
+Usage    : CAST "GREATER CLAIREVOYANCE" [TARGET NAME] \n\r\
+Example  : cast "greater clairvoyance" here\n\r\
+This spell allows the caster to see everything look at by someone in \
+the target place, whether that be a room, area, or even a specific ship.
+
 SPELL_GREATERENCHANTARMOR=SPELL_GREATER_ENCHANT_ARMOR
 SPELL_GREATER_ENCHANT_ARMOR=<ABILITY>\
 Usage    : CAST "GREATER ENCHANT ARMOR" [TARGET NAME] \n\r\
